--- a/src/pages/Profile/EditProfile/EditProfile.css
+++ b/src/pages/Profile/EditProfile/EditProfile.css
@@ -108,20 +108,25 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    margin-top: 30px;
+    /* margin-top: 10px; */
     margin-left: 20px;
+    /* background-color: yellow; */
+    margin-top: -20px;
   }
   
   .birthdate-section p {
     font-weight: 600;
     padding-left: 5px;
     margin-bottom:8px;
+    padding-bottom: 25px;
   }
   
   .birthdate-section text {
     color: rgb(135, 214, 250);
     cursor: pointer;
-    padding-bottom: 20px;
+    padding-bottom: 0px;
+    /* background-color: white; */
+    margin-top: 7px;
   }
   
   .text {
@@ -139,7 +144,25 @@
     background-color: black;
     border-radius: 20px;
   }
+
+  .text>.e-button :hover{
+    background-color: white;
+    color: black;
+  }
+
+  .text>.e-button a
+  {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+  }
+
+  .text>.e-button a:hover{
+    color: black;
+  }
   
+  .last-section{
+    margin-top: -20px;
+  }
   .last-section h2 {
     display: flex;
     flex-direction: column;
@@ -152,10 +175,36 @@
     align-items: center;
     cursor: pointer;
     padding: 5px;
-    margin-top: 20px;
-    margin-bottom: 60px;
+    border-radius: 20px;
+    margin-top: 10px;
+    /* margin-bottom: 60px; */
   }
   
   .last-section>.last-btn:hover {
     background-color: #b4b7b9
+    
   }
+
+  .badge-section {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-left: 20px;
+    margin-top: -20px;
+  }
+  
+  .badge-section p {
+    font-weight: 600;
+    padding-left: 5px;
+    /* margin-bottom: 8px; */
+    padding-bottom: 25px;
+  }
+  
+  .badge-section text {
+    color: rgb(135, 214, 250);
+    cursor: pointer;
+    padding-bottom: 15px;
+    margin-top: 12px;
+  }
+
+  
